
gttgladedir = $(datadir)/gtt/glade

gttglade_DATA =			\
  interval_edit.glade		\
  interval_popup.glade		\
  journal.glade			\
  not-implemented.glade		\
  project_properties.glade	\
  task_properties.glade

STRING_FILES = 				\
	interval_edit.c			\
	interval_popup.c		\
	journal_strings.c		\
	not-implemented_strings.c 	\
	project_properties_strings.c	\
	task_properties_strings.c

EXTRA_DIST = 			\
	.cvsignore 		\
	$(gttglade_DATA)	\
	$(STRING_FILES)


